<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundLayout"
    tools:context=".ui.movie.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="Billboard"
        android:textSize="55dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_card_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/big_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:backgroundTint="@color/cardLayout"
        app:cardCornerRadius="@dimen/medium_gap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="180dp"
                android:layout_marginLeft="@dimen/small_gap"
                android:layout_height="wrap_content"
                android:src="@drawable/star_wars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/small_gap"
                android:textSize="30dp"
                android:text="@string/star_wars_name"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text2"/>

            <TextView
                android:id="@+id/text2"
                android:layout_marginLeft="@dimen/small_gap"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/calification"
                android:textSize="30dp"
                android:text="@string/star_wars_cal"
                app:layout_constraintStart_toEndOf="@id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/text1"
                app:layout_constraintBottom_toBottomOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/movie_card_view2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/big_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:backgroundTint="@color/cardLayout"
        app:cardCornerRadius="@dimen/medium_gap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_card_view" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:src="@drawable/harry_potter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="@dimen/small_gap"
                android:textSize="30dp"
                android:text="@string/harry_potter_name"
                app:layout_constraintStart_toEndOf="@id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/text4"/>

            <TextView
                android:id="@+id/text4"
                android:layout_marginLeft="@dimen/small_gap"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/calification"
                android:textSize="30dp"
                android:text="@string/harry_potter_cal"
                app:layout_constraintStart_toEndOf="@id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/text3"
                app:layout_constraintBottom_toBottomOf="parent"/>







        </androidx.constraintlayout.widget.ConstraintLayout>











    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonFloating"
        android:layout_width="wrap_content"
        android:layout_height="85dp"
        android:src="@drawable/cruz"
        android:contentDescription="Agregar"
        android:layout_marginRight="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/medium_gap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>